added a landing page with no parallax yet

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
     </style>
 </head>
 <body>
+  <section class="parallax landing-page">
+    <div>
+        <h1 class="redf">Redflame</h1>
+        <h1 class="and">&</h1>
+        <h1 class="bluef"> Blueflame</h1>
+        <div class="btns">Start</div>
+        <div class="btns">Character</div>
+        <div class="btns">Exit</div>
+    </div>
+</section>
+
   <div id="gameContainer"></div>
     <div id="gameOverScreen" class="hidden">
         <div class="game-over-content">
@@ -29,7 +40,7 @@
             <button id="exitButton">Exit</button>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <!-- <script src="js/main.js"></script> -->
     <script src="js/phaser.js"></script>
 </body>
 </html>
