Fixed game over screen conflict

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-  <section class="parallax landing-page">
+  <!-- <section class="parallax landing-page">
     <div>
         <h1 class="redf">Redflame</h1>
         <h1 class="and">&</h1>
@@ -30,7 +30,7 @@
         <div class="btns">Character</div>
         <div class="btns">Exit</div>
     </div>
-</section>
+</section> -->
 
   <div id="gameContainer"></div>
     <div id="gameOverScreen" class="hidden">
@@ -40,7 +40,7 @@
             <button id="exitButton">Exit</button>
         </div>
     </div>
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
     <script src="js/phaser.js"></script>
 </body>
 </html>
