added navigation between level1 and level2 and added gameOver.js

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <button id="exitButton">Exit</button>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/newLevelScene.js"></script>
+    <script type="module" src="js/GameOver.js"></script>
     <script src="js/phaser.js"></script>
 </body>
 </html>
