--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     <script type="module" src="js/main.js"></script>
     <script type="module" src="js/newLevelScene.js"></script>
     <script type="module" src="js/GameOver.js"></script>
-    <script src="js/phaser.js"></script>
+    <script type="module" src="js/phaser.js"></script>
 </body>
 </html>
