--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
             <button id="exitButton">Exit</button>
         </div>
     </div>
-    <script type="module" src="js/main.js"></script>
-    <script type="module" src="js/newLevelScene.js"></script>
-    <script type="module" src="js/GameOver.js"></script>
-    <script type="module" src="js/phaser.js"></script>
+    <script  src="js/main.js"></script>
+    <script  src="js/phaser.js"></script>
 </body>
 </html>
