fixed the landing page, and linked it to level 1

--- a/index.html
+++ b/index.html
@@ -15,47 +15,38 @@
       }
       #landingPage {
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.8);
-        z-index: 10;
+        flex-direction: column;
+        text-align: center;
+        color: white;
+      }
+      #gameContainer {
+        display: none;
+        justify-content: center;
+        align-items: center;
       }
       .hidden {
-        display: none;
-      }
-      #game-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
+        display: none !important; /* Add !important to ensure no other rules override this */
       }
     </style>
 </head>
 <body>
-  <section id="landingPage" class="parallax landing-page">
-    <div>
-        <h1 class="redf">Redflame</h1>
-        <h1 class="and">&</h1>
-        <h1 class="bluef">Blueflame</h1>
-        <div class="btns" id="startBtn">Start</div>
-        <div class="btns" id="characterBtn">Character</div>
-    </div>
-</section> -->
+  <div id="landingPage">
+    <h1>Red Flame Blue Flame</h1>
+    <button id="startButton">Start</button>
+    <button id="landingExitButton">Exit</button>
+  </div>
 
   <div id="gameContainer"></div>
     <div id="gameOverScreen" class="hidden">
         <div class="game-over-content">
             <h1>Game Over</h1>
             <button id="retryButton">Retry</button>
-            <button id="exitButton">Exit</button>
+            <button id="gameOverExitButton">Exit</button>
         </div>
     </div>
-    <script  src="js/main.js"></script>
-    <script  src="js/phaser.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/phaser.js"></script>
 </body>
 </html>
