added level 5 and sketch.js file for drawing pad

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <button id="exitButton">Exit</button>
         </div>
     </div>
+    <script src="js/sketch.js"></script>
     <script src="js/main.js"></script>
     <script src="js/phaser.js"></script>
 </body>
