--- a/index.html
+++ b/index.html
@@ -1,52 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
-    <link rel="stylesheet" href="Styles/styles.css">
-    <style>
-      body, html {
-        height: 100%;
-        margin: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        background-color: #000;
-      }
-      #landingPage {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        text-align: center;
-        color: white;
-      }
-      #gameContainer {
-        display: none;
-        justify-content: center;
-        align-items: center;
-      }
-      .hidden {
-        display: none !important; /* Add !important to ensure no other rules override this */
-      }
-    </style>
+  <meta charset="UTF-8" />
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+  <link rel="stylesheet" href="Styles/styles.css">
+  <link rel="stylesheet" href="Styles/parallax.css">
+  <title>Parallax Scrolling Website</title>
 </head>
 <body>
-  <div id="landingPage">
-    <h1>Red Flame Blue Flame</h1>
-    <button id="startButton">Start</button>
-    <button id="landingExitButton">Exit</button>
-  </div>
-
-  <div id="gameContainer"></div>
-    <div id="gameOverScreen" class="hidden">
-        <div class="game-over-content">
-            <h1>Game Over</h1>
-            <button id="retryButton">Retry</button>
-            <button id="gameOverExitButton">Exit</button>
-        </div>
+  <section class="parallax">
+    <img src="assets/parallax/hill1.png" id="hill1">
+    <img src="assets/parallax/hill2.png" id="hill2">
+    <img src="assets/parallax/hill3.png" id="hill3">
+    <img src="assets/parallax/hill4.png" id="hill4">
+    <img src="assets/parallax/hill5.png" id="hill5">
+    <img src="assets/parallax/tree.png" id="tree">
+    <h2 id="text">Red Flame Blue Flame</h2>
+    <img src="assets/parallax/leaf.png" id="leaf">
+    <img src="assets/parallax/plant.png" id="plant">
+  </section>
+  <section class="sec">
+    <div id="landingPage">
+      <h1><span class="red">Red Flame </span>  <span class="blue">Blue Flame</span></h1>
+      <div id="btns">
+        <button id="startButton">Start</button>
+        <button id="landingExitButton">Exit</button>
+      </div>
     </div>
-    <script src="js/main.js"></script>
-    <script src="js/phaser.js"></script>
+    <div id="gameContainer"></div>
+    <div id="gameOverScreen" class="hidden">
+      <div class="game-over-content">
+        <h1>Game Over</h1>
+        <button id="retryButton">Retry</button>
+        <button id="gameOverExitButton">Exit</button>
+      </div>
+    </div>
+  </section>
+  <script src="js/main.js"></script>
+  <script src="js/phaser.js"></script>
 </body>
 </html>
