--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <h1><span class="red">Red Flame </span>  <span class="blue">Blue Flame</span></h1>
       <div id="btns">
         <button id="startButton">Start</button>
+        <button id="levelsButton">Levels</button>
         <button id="landingExitButton">Exit</button>
       </div>
     </div>
@@ -34,6 +35,14 @@
         <button id="retryButton">Retry</button>
         <button id="gameOverExitButton">Exit</button>
       </div>
+    </div>
+    <div id="levelsMenu">
+      <h2>Select Level</h2>
+      <button class="levelButton" data-level="level1">Level 1</button>
+      <button class="levelButton" data-level="level2">Level 2</button>
+      <button class="levelButton" data-level="level3">Level 3</button>
+      <button class="levelButton" data-level="level4">Level 4</button>
+      <button id="closeLevelsButton">Close</button>
     </div>
   </section>
   <script src="js/main.js"></script>
