making final changes to levels and levels button

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
       <button class="levelButton" data-level="level2">Level 2</button>
       <button class="levelButton" data-level="level3">Level 3</button>
       <button class="levelButton" data-level="level4">Level 4</button>
+      <button class="levelButton" data-level="level5">Level 5</button> <!-- Added level5 button -->
       <button id="closeLevelsButton">Close</button>
-    </div>
+  </div>
+  
   </section>
   <script src="js/main.js"></script>
   <script src="js/phaser.js"></script>
