Add 'How to Play' menu with controls and goals; enhanced keyboard navigation for landing page and menu interactions. Updated styles for buttons and menus for improved user experience.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,48 @@
       <div id="btns">
         <button id="startButton">Start</button>
         <button id="levelsButton">Levels</button>
+        <button id="howToPlayButton">How to Play</button>
+      </div>
+    </div>
+
+    <div id="howToPlayMenu" class="hidden">
+      <div class="menu-content">
+        <h2>How to Play</h2>
+        <div class="controls-section">
+          <h3>Controls</h3>
+          <div class="control-grid">
+            <div class="control-item">
+              <span class="key">A/D</span>
+              <span class="description">Move Blue Chracter</span>
+            </div>
+            <div class="control-item">
+              <span class="key">←/→</span>
+              <span class="description">Move Red Chracter</span>
+            </div>
+            <div class="control-item">
+              <span class="key">W</span>
+              <span class="description">Jump (Blue)</span>
+            </div>
+            <div class="control-item">
+              <span class="key">↑</span>
+              <span class="description">Jump (Red)</span>
+            </div>
+            <div class="control-item">
+              <span class="key">ESC</span>
+              <span class="description">Pause Game</span>
+            </div>
+          </div>
+        </div>
+        <div class="goals-section">
+          <h3>Goals</h3>
+          <ul>
+            <li>Guide both characters to their respective doors.</li>
+            <li class="last-item">Watch out for flames! They will reset your progress.</li>
+            <li><span class="red">Red Character</span> can't touch <span class="blue">Blue Flame.</span></li>
+            <li><span class="blue">Blue Character</span> can't touch <span class="red">Red Flame.</span></li>
+          </ul>
+        </div>
+        <button id="closeHowToPlayButton" class="menu-button">Close</button>
       </div>
     </div>
 
