--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
       <div class="menu-content">
         <h2>Game Paused</h2>
         <button id="resumeButton" class="menu-button">Resume</button>
+        <button id="howToPlayPauseButton" class="menu-button">How to Play</button>
         <button id="restartButton" class="menu-button">Restart Level</button>
         <button id="exitToMenuButton" class="menu-button">Exit to Menu</button>
       </div>
