Updated index.html title and added favicon; enhanced style.css with new font and scroll indicator styles; implemented scroll indicator functionality in main.js for smooth scrolling to sections.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="assets/images/logo.png">
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
   <link rel="stylesheet" href="Styles/style.css">
-  <title>Fireboy and Watergirl</title>
+  <title>Red Flame & Blue Flame</title>
 </head>
 <body>
   <section class="parallax">
@@ -18,6 +19,7 @@
     <h2 id="text">Red Flame & Blue Flame</h2>
     <img src="assets/parallax/leaf.png" id="leaf">
     <img src="assets/parallax/plant.png" id="plant">
+    <div class="scroll-indicator" id="scrollIndicator"></div>
   </section>
 
   <section class="sec">
